--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,10 @@ knitr::opts_chunk$set(
 # animalsounds
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/MMJansen/animalsounds/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/MMJansen/animalsounds/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of animalsounds is to ...
+The goal of animalsounds is to make a sentence with an animal and a sound.
 
 ## Installation
 
@@ -35,21 +36,8 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(animalsounds)
-## basic example code
+
+animal_sounds("dog", "woof")
+
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
